<resources>
    <string name="app_name">DAILY MED</string>
    <string name="heading_heart">Heart</string>
    <string name="heading_water">Water</string>
    <string name="heading_home">Home</string>
    <string name="heading_fitness">Fitness</string>
    <string name="heading_pill">Pill</string>
    <string name="myDaliyPill">My Daily Pills</string>
    <string name="RememberYourHealth">Remember Your Health</string>
    <string name="homeHeading">DAILY MED</string>
    <string name="sloganName">Live Healthier</string>
    <string name="desc">Image</string>
    <string name="IBdesc">Image Button</string>
    <string name="pReminderTxt">Pill Reminder</string>
    <string name="calTextId">Health Calculator</string>
    <string name="wRemindertext">Water Reminder</string>
    <string name="FitnessTrackerTextId">Fitness Tracker</string>
    <string name="tvWelcome">Welcome</string>


    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="txtCoffee">Coffee</string>
    <string name="txtJuice">Juice</string>
    <string name="txtTea">Tea</string>
    <string name="txtCola">Cola</string>
    <string name="txtWine">Wine</string>
    <string name="txtEnergydrink">Energy Drink</string>
    <string name="txtWater">Water</string>
    <string name="tvcupselect">Select a drink</string>
    <string name="cancelCoffee">cancelCoffee</string>
    <string name="WineDone">done</string>

    <string name="EnergyDrinkDone">Done</string>

    <string name="ColaDone">Done</string>
    <string name="EnergyDone">Done</string>
    <string name="JuiceDone">Done</string>
    <string name="TeaDone">Done</string>
    <string name="WaterDone">Done</string>
    <string name="CoffeeDone">Done</string>
    <string name="Winedone">Done</string>


</resources>